--- a/.github/workflows/publish-pypi-release.yml
+++ b/.github/workflows/publish-pypi-release.yml
@@ -15,6 +15,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade build
+        python -m pip install --upgrade twine
     - name: Build and publish
       env:
         TWINE_USERNAME: __token__
