--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only"
 ]
 dependencies = [
-    "decord >= 0.6 ; platform_system == 'Windows'",
+    "eva-decord >= 0.6.1",
     "ffmpegio >= 0.8.3",
     "numba >= 0.57.1",
     "numpy >= 1.24.4",
