--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
     "numba >= 0.57.1",
     "numpy >= 1.24.4",
     "pymongo == 3.12.2",
-    "python-dotenv == 1.0.0"
+    "python-dotenv == 1.0.0",
+    "requests"
 ]
 dynamic = ["version"]
 
