--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "numpy >= 1.24.4",
     "pymongo == 3.12.2",
     "python-dotenv == 1.0.0",
-    "requests"
+    "requests",
+    "pillow"
 ]
 dynamic = ["version"]
 
